--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-use": "^17.5.0"
   },
